# RAG-Demo

./: .gitignore  README.md  app.py  database.py  embedding_function.py  pyproject.toml  query_data.py  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
